# bare-metal-risc-v

./: .gitignore  CMakeLists.txt  Makefile  README.md  linker.ld  main.c  startup.s
include/: uart.h
